--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
   --background: oklch(0.9900 0 0);
   --foreground: oklch(0 0 0);
   --card: oklch(1 0 0);
-  --card-foreground: oklch(0 0 0);
+  --card-foreground: oklch(20% 0 0);
   --popover: oklch(0.9900 0 0);
   --popover-foreground: oklch(0 0 0);
   --primary: oklch(0 0 0);
