polishing the UI

--- a/app/globals.css
+++ b/app/globals.css
@@ -48,6 +48,7 @@
 }
 
 .dark {
+  --card-background:#171717;
   --background: oklch(0 0 0);
   --foreground: oklch(1 0 0);
   --card: oklch(0.1400 0 0);
